--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>眼鏡官網</title>
+    <link href="https://fonts.googleapis.com/css?family=Material+Icons%7CMaterial+Icons+Outlined%7CMaterial+Icons+Two+Tone%7CMaterial+Icons+Round%7CMaterial+Icons+Sharp" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -168,11 +169,15 @@
                     </ul>
                     <div class="footer-contact">
                         <div class="footer-contact-phone">
-                            <img src="images/outline_phone_white_24dp.png" alt="phone icon">
+                            <span class="material-icons-outlined">
+                                phone
+                            </span>
                             0800-000-000
                         </div>
                         <div class="footer-contact-mail">
-                            <img src="images/outline_email_white_24dp.png" alt="email icon">
+                            <span class="material-icons-outlined">
+                                email
+                            </span>
                             glasses@business.com
                         </div>
                     </div>
