--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <div class="container navbar">
             <a class="logo" href=""><img src="images/logo-white.png" alt="logo"></a>
             <ul class="menu">
-                <li class="menu-item"><a href="">系列鏡框</a></li>
-                <li class="menu-item"><a href="">門市據點</a></li>
-                <li class="menu-item"><a href="">部落格</a></li>
-                <li class="menu-item"><a href="">常見問題</a></li>
+                <li class="menu-item"><a href="#">系列鏡框</a></li>
+                <li class="menu-item"><a href="#">門市據點</a></li>
+                <li class="menu-item"><a href="#">部落格</a></li>
+                <li class="menu-item"><a href="#">常見問題</a></li>
             </ul>
         </div>
     </nav>
@@ -23,7 +23,7 @@
         <div class="container banner">
             <p>Promise-Desert 2020 早春系列</p>
             <h1>看得清，才能看得遠</h1>
-            <a href="">立即購買</a>
+            <a href="#">立即購買</a>
         </div>
     </div>
     <div class="bg-secondary">
@@ -31,22 +31,22 @@
             <h2>用專業的心，做專業的事</h2>
             <ul class="introduction-list">
                 <li class="introduction-card">
-                    <img src="images/home-section2-1.png" alt="">
+                    <img src="images/home-section2-1.png" alt="price icon">
                     <h3>單一價格</h3>
                     <p>無論任何度數皆不需追加費用即可擁有適合自己的薄型球面鏡片。</p>
                 </li>
                 <li class="introduction-card">
-                    <img src="images/home-section2-2.png" alt="">
+                    <img src="images/home-section2-2.png" alt="clock icon">
                     <h3>20 分鐘即可取件</h3>
                     <p>為了您的寶貴時間著想，以豐富專業知識與技術將結帳到交件的時間縮減至最快 20 分鐘即可完成。</p>
                 </li>
                 <li class="introduction-card">
-                    <img src="images/home-section2-3.png" alt="">
+                    <img src="images/home-section2-3.png" alt="heart icon">
                     <h3>安心售後服務</h3>
                     <p>我們提供長達 120 天的保固售後服務，不限會員資格皆享有免費深層保養及專業維修服務。</p>
                 </li>
                 <li class="introduction-card">
-                    <img src="images/home-sectioin2-4.png" alt="">
+                    <img src="images/home-sectioin2-4.png" alt="glasses icon">
                     <h3>關於鏡片</h3>
                     <p>使用世界知名頂級品牌，抗UV、防汙鍍膜薄型非球面鏡片。</p>
                 </li>
@@ -57,15 +57,15 @@
         <h2>經典系列鏡框</h2>
         <ul class="classic-list">
             <li class="classic-card">
-                <img src="images/home-section3-1.png" alt="">
+                <img src="images/home-section3-1.png" alt="classic-glasses-photo1">
                 <h3>OPTICAL</h3>
             </li>
             <li class="classic-card">
-                <img src="images/home-section3-2.png" alt="">
+                <img src="images/home-section3-2.png" alt="classic-glasses-photo2">
                 <h3>SUNGLASSES</h3>
             </li>
             <li class="classic-card">
-                <img src="images/home-section3-3.png" alt="">
+                <img src="images/home-section3-3.png" alt="classic-glasses-photo3">
                 <h3>FUNCTIONAL</h3>
             </li>
         </ul>
@@ -77,14 +77,14 @@
                 <li class="co-brand-card">
                     <picture>
                         <source srcset="images/home-section4-1-sm.png" media="(max-width: 576px)" />
-                        <img src="images/home-section4-1.png" alt="">
+                        <img src="images/home-section4-1.png" alt="co-brand-glasses-photo1">
                     </picture>
                     <h3>DOUBLE A+</h3>
                 </li>
                 <li class="co-brand-card">
                     <picture>
                         <source srcset="images/home-section4-2-sm.png" media="(max-width: 576px)" />
-                        <img src="images/home-section4-2.png" alt="">
+                        <img src="images/home-section4-2.png" alt="co-brand-glasses-photo2">
                     </picture>
                     <h3>YOUTH</h3>
                 </li>
@@ -99,7 +99,7 @@
                     <img src="images/home-section5-1.png" alt="photo">
                     <h3>Jessy</h3>
                     <p>眼鏡品質優良，下次還會想來這邊購買！</p>
-                    <p class="date">2021/06/20</p>
+                    <time class="date">2021/06/20</time>
                 </div>
             </li>
             <li class="recommend-column">
@@ -107,7 +107,7 @@
                     <img src="images/home-section5-2.png" alt="photo">
                     <h3>凱倫</h3>
                     <p>做工細緻、鏡架很輕盈，待久也不會覺得有負擔，推薦給大家！</p>
-                    <p class="date">2021/04/18</p>
+                    <time class="date">2021/04/18</time>
                 </div>
             </li>
             <li class="recommend-column">
@@ -115,7 +115,7 @@
                     <img src="images/home-section5-3.png" alt="photo">
                     <h3>悠悠</h3>
                     <p>謝謝客服人員的詳細回答，成功買到了喜歡的眼鏡，下次會再回購！</p>
-                    <p class="date">2020/12/25</p>
+                    <time class="date">2020/12/25</time>
                 </div>
             </li>
             <li class="recommend-column">
@@ -123,7 +123,7 @@
                     <img src="images/home-section5-4.png" alt="photo">
                     <h3>Kyuan</h3>
                     <p>服務很好，品質沒有任何問題，非常喜歡。</p>
-                    <p class="date">2020/10/31</p>
+                    <time class="date">2020/10/31</time>
                 </div>
             </li>
         </ul>
@@ -147,10 +147,10 @@
                 </div>
                 <div>
                     <label class="contact-form-title" for="message">意見反應</label>
-                    <textarea class="contact-form-content contact-form-content-textarea" name="feedback" id="messafe" placeholder="請輸入您的意見"></textarea>
+                    <textarea class="contact-form-content contact-form-content-textarea" name="feedback" id="message" placeholder="請輸入您的意見"></textarea>
                 </div>
                 <div>
-                    <input type="checkbox" name="agreement" id="agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。
+                    <input type="checkbox" name="agreement" id="agree"><label for="agree">我同意隱私權政策，並同意依隱私權政策中所述的方式處理自己的資料。</label>
                 </div>
                 <input class="contact-button" type="submit" value="確認送出">
             </form>
@@ -161,24 +161,24 @@
             <div class="footer-top">
                 <div class="footer-top-left">
                     <ul class="footer-menu">
-                        <li class="footer-menu-item"><a href="">首頁</a></li>
-                        <li class="footer-menu-item"><a href="">系列鏡框</a></li>
-                        <li class="footer-menu-item"><a href="">門市據點</a></li>
-                        <li class="footer-menu-item"><a href="">部落格</a></li>
-                        <li class="footer-menu-item"><a href="">常見問題</a></li>
+                        <li class="footer-menu-item"><a href="#">首頁</a></li>
+                        <li class="footer-menu-item"><a href="#">系列鏡框</a></li>
+                        <li class="footer-menu-item"><a href="#">門市據點</a></li>
+                        <li class="footer-menu-item"><a href="#">部落格</a></li>
+                        <li class="footer-menu-item"><a href="#">常見問題</a></li>
                     </ul>
                     <div class="footer-contact">
                         <div class="footer-contact-phone">
                             <span class="material-icons-outlined">
                                 phone
                             </span>
-                            0800-000-000
+                            <a href="tel:0800-000-000">0800-000-000</a>
                         </div>
                         <div class="footer-contact-mail">
                             <span class="material-icons-outlined">
                                 email
                             </span>
-                            glasses@business.com
+                            <a href="mailto:glasses@business.com">glasses@business.com</a>
                         </div>
                     </div>
                 </div>
@@ -193,8 +193,8 @@
             <div class="footer-end">
                 <div class="footer-copyright">Copyright © 2020 Glasses.All rights reserved.</div>
                 <ul class="footer-policy">
-                    <li class="footer-policy-item"><a href="">隱私權政策</a></li>
-                    <li class="footer-policy-item"><a href="">服務條款</a></li>
+                    <li class="footer-policy-item"><a href="#">隱私權政策</a></li>
+                    <li class="footer-policy-item"><a href="#">服務條款</a></li>
                 </ul>
             </div>
         </div>
